<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcknd_light_grey" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/screen_background"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:visibility="visible" >

            <TextView
                android:id="@+id/curlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/cur_location"
                android:textColor="@color/solid_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weatherfrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/weather_from"
                android:textColor="@color/solid_black"
                android:textSize="16sp" />
            
            <RelativeLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginBottom="10dp">
            
	            <LinearLayout
	                android:orientation="vertical"
	                android:layout_width="100dp"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:layout_alignParentLeft="true"
	                android:layout_centerVertical="true">
	                
		            <ImageView
		                android:id="@+id/thumbnail_image"
		                android:layout_width="match_parent"
		                android:layout_height="80dp"
		                android:layout_gravity="center_horizontal"
		                android:contentDescription="@string/image_placeholder"
		                android:src="@drawable/weezle_sun" />              
	            </LinearLayout>
            
	            <LinearLayout
	                android:id="@+id/visiLayout"
	                android:orientation="vertical"
	                android:layout_width="100dp"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:layout_alignParentRight="true"
	                android:layout_centerVertical="true">
	                
	                <TextView
	                    android:id="@+id/temperature"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="@string/temp"
	                    android:textColor="@color/solid_black"
	                    android:textSize="40sp"
	                    android:textStyle="bold" >

	                </TextView>   
	            </LinearLayout>            
	        </RelativeLayout>

            <TextView
                android:id="@+id/maintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/solid_black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/main_text" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_black"
                android:text="@string/desc" />
	        
	        <TextView
	            android:id="@+id/date_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/date_time"
	            android:textSize="15sp"
	            android:textColor="@color/solid_black"
	            android:typeface="sans" />
	            
	        <Button
	            android:id="@+id/btnUpdate"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="10dp"
	            android:text="@string/update_now"
	            android:textColor="@color/solid_black" />
        </LinearLayout>
</RelativeLayout>